2011-09-30	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* nios2-context-switch.S: Use small-data area access for
	_Per_CPU_Information fields.

2011-09-27	Sebastian Huber <sebastian.huber@embedded-brains.de>

	PR 1914/cpukit
	* rtems/score/cpu.h: Select timestamp implementation.

2011-09-16	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* nios2-eic-il-low-level.S, nios2-eic-rsie-low-level.S: New files.
	* Makefile.am: Reflect changes above.
	* rtems/score/cpu.h, rtems/score/nios2-utility.h,
	nios2-thread-dispatch-disabled.c, nios2-context-switch.S: Added
	support for thread stack protection via the MPU.

2011-09-14	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* rtems/score/cpu.h: Request cache alignment and small data area in
	CPU_STRUCTURE_ALIGNMENT.

2011-09-09	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* nios2-thread-dispatch-disabled.c: Use offsetof() instead of
	RTEMS_offsetof().

2011-09-02	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* rtems/score/nios2-utility.h, nios2-isr-set-level.c,
	nios2-isr-get-level.c: Renamed functions.

2011-09-02	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* rtems/score/nios2-utility.h: Use the same values for defines used by
	Altera HAL.

2011-09-02	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* rtems/score/nios2-utility.h: Avoid redefines with Altera HAL.
	Declare _Nios2_ISR_Set_level().
	* nios2-context-initialize.c: Use _Nios2_ISR_Set_level().
	* nios2-isr-set-level.c: Define _Nios2_ISR_Set_level().

2011-09-01	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* cpu.c, cpu_asm.S: Removed files.
	* nios2-context-initialize.c, nios2-context-switch.S,
	nios2-fatal-halt.c, nios2-initialize-vectors.c, nios2-initialize.c,
	nios2-isr-get-level.c, nios2-isr-install-raw-handler.c,
	nios2-isr-install-vector.c, nios2-isr-is-in-progress.c,
	nios2-isr-set-level.c, nios2-thread-dispatch-disabled.c,
	rtems/score/nios2-utility.h: New files.